Prevent useless scrollbar with iframes. This is due to bad CSS actually.

--- a/src/silva/ui/static/css/smi.css
+++ b/src/silva/ui/static/css/smi.css
@@ -298,6 +298,11 @@ div.batching a.current {
   overflow-y: auto;
 }
 
+#workspace .iframe-view {
+  overflow-x: inherit;
+  overflow-y: inherit;
+}
+
 /*
  * Dialog disclaimer
  */
